exercise-finder geliştirildi.

--- a/views/exercise-finder.ejs
+++ b/views/exercise-finder.ejs
@@ -94,7 +94,6 @@
       width: 100%;
       height: auto;
     }
-
   </style>
 </head>
 
@@ -112,39 +111,48 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-md-8 col-sm-5 col-xs-2">
             <div class="container mt-5">
-                <h1>Exercise Finder</h1>
-    <form action="/exercise-finder" method="get">
-        <label for="kategori">Category:</label>
-        <select name="kategori" id="kategori">
-            <option value="">All</option>
-            <option value="kol">Kol</option>
-            <option value="omuz">Omuz</option>
-            <option value="gögüs">Göğüs</option>
-            <option value="sirt">Sırt</option>
-            <option value="bacak">Bacak</option>
-            <option value="karin">Karın</option>
-        </select>
-        <label for="tur">Type:</label>
-        <select name="tur" id="tur">
-            <option value="">All</option>
-            <option value="push">Push</option>
-            <option value="pull">Pull</option>
-            <option value="other">Other</option>
-        </select>
-        <button type="submit">Find Exercises</button>
-    </form>
-    <ul>
-        <% exercises.forEach(exercise => { %>
-            <li>
-                <h2><%= exercise.name %></h2>
-                <img src="<%= exercise.imageUrl %>" alt="<%= exercise.name %>">
-                <p><%= exercise.description %></p>
-                <p>Category: <%= exercise.kategori %></p>
-                <p>Type: <%= exercise.tur %></p>
-            </li>
-        <% }) %>
-    </ul>
-            
+              <h1>Exercise Finder</h1>
+              <form action="/exercise-finder" method="get" class="mb-4">
+                <div class="row mb-3">
+                  <div class="col-md-6">
+                    <label for="kategori" class="form-label">Category:</label>
+                    <select name="kategori" id="kategori" class="form-select">
+                      <option value="">All</option>
+                      <option value="kol">Kol</option>
+                      <option value="omuz">Omuz</option>
+                      <option value="gögüs">Göğüs</option>
+                      <option value="sirt">Sırt</option>
+                      <option value="bacak">Bacak</option>
+                      <option value="karin">Karın</option>
+                    </select>
+                  </div>
+                  <div class="col-md-6">
+                    <label for="tur" class="form-label">Type:</label>
+                    <select name="tur" id="tur" class="form-select">
+                      <option value="">All</option>
+                      <option value="push">Push</option>
+                      <option value="pull">Pull</option>
+                      <option value="other">Other</option>
+                    </select>
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Find Exercises</button>
+              </form>
+
+              <div class="row">
+                <% exercises.forEach(exercise => { %>
+                <div class="col-md-4 mb-4">
+                  <div class="card">
+                    <img src="<%= exercise.imageUrl %>" class="card-img-top exercise-img" alt="<%= exercise.name %>">
+                    <div class="card-body">
+                      <h5 class="card-title"><%= exercise.name %></h5>
+                      <p class="card-text"><%= exercise.description %></p>
+                    </div>
+                  </div>
+                </div>
+                <% }) %>
+              </div>
+
               <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
             </div>
           </div>
